--- a/text.html
+++ b/text.html
@@ -1,1 +1,1 @@
-"<h5>Hey,"+ mailData.name+"</h5><h3> Verify your email address</h3><p>Your OTP is: <strong>"+mailData.otp+"</strong></p> "
+"<h3>Hey,"+ mailData.name+" !</h3><h3 style="color: red;"><i>Merry Christmas🎄</i></h3><h6>Verify your email address</h6><h6>Your OTP is: <strong>"+mailData.otp+"</strong></h6><br><h5 style="color: green;"><i>May the festive season bring you opportunities and success in life! Merry Christmas!</i></h5><p>Thanks & Regards</p><p><i>Secret Santa🎅🏻</i></p>"
